[project]
name = "qd-cli"
authors = [{ name = "a76yyyy", email = "a76yyyy@gmail.com" }]
description = "Command line tool based on qd-core for executing har templates."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: MIT",
]
dependencies = ["qd-core"]
version = "0.0.1"
readme = "README.md"

[project.urls]
Homepage = "https://qd-today.github.io/qd/"
Documentation = "https://qd-today.github.io/qd/"
Repository = "https://github.com/qd-today/qd"
Issues = "https://github.com/qd-today/qd/issues"

[project.optional-dependencies]
ddddocr = ["qd-core[ddddocr]"]

[project.scripts]
qd = "qd_cli.cli:fetch_har_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["qd_cli*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"qd_cli.locale" = ["**/*.po", "**/*.mo", "**/*.pot"]

[tool.uv]
package = true

[dependency-groups]
lint = [
    "mypy>=1.13.0",
]


[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
