[project]
name = "qd-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "a76yyyy", email = "q981331502@163.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlmodel>=0.0.22",
]

[project.scripts]
qd-server = "qd_server:main"

[build-system]
requires = ['setuptools', 'wheel', 'plux>=1.3.1']
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["qd_server*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"qd_core.locale" = ["**/*.po", "**/*.mo", "**/*.pot"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "setuptools>=70.0.0",
    "wheel>=0.45.0",
]
lint = [
    "mypy>=1.13.0",
    "pylint-pydantic>=0.3.2",
    "ruff>=0.7.3",
    "types-setuptools>=75.3.0.20241112",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
