[project]
name = "qd-core"
authors = [{ name = "a76yyyy", email = "q981331502@163.com" }]
description = "The core library and runtime of QD"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: MIT",
]
dependencies = [
    "build",
    "plux>=1.7",
    "tornado",
    "charset-normalizer",
    "requests",
    "pbkdf2",
    "pycryptodome",
    "croniter",
    "Jinja2",
    "u-msgpack-python",
    "pysocks",
    "faker",
    "fastapi-slim",
    "aiofiles",
    "passlib",
    "aiohttp",
    "starlette",
    "tzdata",
    "pip",
    "pycurl>=7.45.3",
    "pydantic",
    "pydantic-settings",
    "PyYAML",
    "toml",
    "cachetools",
]
version = "0.0.1"

[project.urls]
Homepage = "https://qd-today.github.io/qd/"
Documentation = "https://qd-today.github.io/qd/"
Repository = "https://github.com/qd-today/qd"
Issues = "https://github.com/qd-today/qd/issues"

[project.optional-dependencies]
ddddocr = ["ddddocr>=1.5.3"]

[project.scripts]
qd = "qd_core.cli.cli:fetch_har_cli"
qd_plugins = "qd_core.plugins.base:entrypoints"

[build-system]
requires = ['setuptools', 'wheel', 'plux>=1.3.1']
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["qd_core*"]
exclude = ["test*"]

[tool.rye]
universal = true
managed = true
dev-dependencies = [
    "colorama; sys_platform == 'win32'",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "mypy",
    "types-cachetools",
    "types-croniter",
    "types-requests",
    "types-python-dateutil",
    "sqlalchemy2-stubs",
    "types-aiofiles",
    "pylint-pydantic",
    "types-passlib",
    "types-setuptools",
    "types-PyYAML",
    "types-toml",
    "setuptools",
    "wheel",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[[tool.mypy.overrides]]
module = "mypy-umsgpack.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ddddocr-umsgpack.*"
ignore_missing_imports = true
